@startuml

class Aluno {
    +nome: string
    +matricula: string
    +email: string
    +telefone: string
    +CRGeral: float
    +CRDisciplina: float
    +curso: string
    +senha: string
    +cadastrar(): void
    +editarPerfil(): void
    +fornecerInformacoes(): void
}

class Professor {
    +nome: string
    +matricula: string
    +email: string
    +telefone: string
    +senha: string
    +criarVagas(): void
}

class Vaga {
    +nome: string
    +identificador: int
    +preRequisitos: string
    +disciplina: string
    +status: string
    +prazoInscricao: date
    +exibirVagas(): void
}

class Inscricao {
    +id: int
    +aluno: Aluno
    +vaga: Vaga
    +documentos: string
    +status: string
    +dataCandidatura: date
    +validarCR(): bool
    +inscrever(): void
}

class RegistroMonitoria {
    +id: int
    +aluno: Aluno
    +vaga: Vaga
    +horasTrabalhadas: float
    +dataRegistro: date
    +validadoPor: Professor
    +registrarMonitoria(): void
}

class Disciplina {
    +nome: string
    +codigo: string
    +professor: Professor
    +cargaHoraria: int
    +ementa: string
}

' Relacionamentos com multiplicidades
Aluno "1" *-- "0..*" Inscricao: Realizada por
Inscricao "0..*" *-- "1" Vaga: Recebe
Vaga "0..*" *-- "1" Disciplina: Relacionada a
Professor "1" o-- "0..*" Disciplina: Ministrada por
Aluno "1" *-- "0..*" RegistroMonitoria: Realiza
Vaga "1" *-- "0..*" RegistroMonitoria: Associada a
Professor "1" --> "0..*" RegistroMonitoria: valida

@enduml